# kgames

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  index.html  index.js
config/: Cargo.toml
config/src/: conf.rs  lib.rs
console/: Cargo.toml
console/src/: lib.rs
cpp/: Makefile
cpp/src/: game.cc  main.cc  rl.hh
cpp/src/games/: pong.cc
engine/: Cargo.toml
engine/examples/: bouncing.rhai
engine/src/: common.rs  engine.rs  ffi.rs  lib.rs  lua_engine.rs  rhai_engine.rs  texture.rs
game_core/: Cargo.toml
game_core/src/: lib.rs  texture.rs
logic/: Cargo.toml
logic/src/: game.rs  lib.rs  menu.rs  ui.rs
logic/src/games/: ball.rs  mod.rs  pong.rs
logic/src/games/breakout/: breakout.rs
logic/src/wrap/: ctx.rs  ctx_impl.rs  mod.rs  wrap.rs
res/: README.txt
res/PixelTexPack/: readme.txt
res/examples/: bouncing.rhai
src/: config.rs  cross.rs  error.rs  ffi.rs  game.rs  hotreload.rs  main.rs  menu.rs  script.rs  texture.rs  ui.rs
src/engine/: common.rs  engine.rs  lua_engine.rs  mod.rs  rhai_engine.rs
src/games/: ball.rs  breakout.rs  dvd.rs  mod.rs  pong.rs
src/games/breakout/: breakout.rs  bricks.rs  mod.rs
src/games/game_of_life/: cell.rs  gol.rs  grid.rs  mod.rs  theme.rs
src/menu/: console.rs  draw.rs  games.rs  mod.rs  settings.rs  update.rs
src/ui/: dialog.rs  log.rs  mod.rs  ui.rs
