[package]
name = "kgames"
version = "0.1.3"
edition = "2021"
build = "build.rs"
repository = "https://github.com/kderef/kgames"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true
debug = false
incremental = false
codegen-units = 1
opt-level = "z" # "s"
panic = "abort"

[dependencies]
anyhow = "1.0.86"
colored = "2.1.0"
include_dir = "0.7.4"
macroquad = {version = "0.4.8", features = ["audio"]}
msgbox = "0.7.0"

[dependencies.futures]
version = "0.3.30"
default-features = false
features = ["executor"]

[dependencies.rhai]
version = "1.19.0"
features = [
  "f32_float",
  "no_module",
  "no_custom_syntax",
  "no_closure",
]

[build-dependencies]
static_vcruntime = "2.0.0"
